--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <!-- conditional statements -->
   <p id="demo1">Good Evening!!</p>
-  <script src="app.js"></script>
+  <script src="atm.js"></script>
 </body>
 
 </html>
