--- a/loops.html
+++ b/loops.html
@@ -12,6 +12,41 @@
         Loops are used to repeat a block of code a number of times.
     </p>
 
+    <ul>
+        <li>for - loops through a block of code a number of times</li>
+        <li>for/in - loops through the properties of an object</li>
+        <li>for/of - loops through the values of an iterable object</li>
+        <li>while - loops through a block of code while a specified condition is true</li>
+        <li>do/while - also loops through a block of code while a specified condition is true</li>
+
+    </ul>
+
+    <p>
+        Often statement 2 is used to evaluate the condition of the initial variable.
+
+        This is not always the case, JavaScript doesn't care. Statement 2 is also optional.
+
+        If statement 2 returns true, the loop will start over again, if it returns false, the loop will end.
+    </p>
+
+    <p>
+        The break statement "jumps out" of a loop.
+
+        The continue statement "jumps over" one iteration in the loop.
+    </p>
+    <p id="demo"></p>
+    <p id="demo1"></p>
+    <p id="demo2"></p>
+    <p id="demo3"></p>
+    <p id="demo4"></p>
+    <p id="demo5"></p>
+    <p id="demo6"></p>
+    <p id="demo7"></p>
+    <p id="demo8"></p>
+    <p id="demo9"></p>
+    <p id="demo10"></p>
+
+
 
 
     <script src="loops.js"></script>
