--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
   <!-- conditional statements -->
   <p id="demo1">Good Evening!!</p>
-  <script src="atm.js"></script>
+  <!-- <script src="atm.js"></script> -->
+  <script src="jstypeof.js"></script>
 </body>
 
 </html>
